--- a/kernel/memory/5. slab分配器/1. 创建slab描述符.md
+++ b/kernel/memory/5. slab分配器/1. 创建slab描述符.md
@@ -459,5 +459,103 @@ __kmem_cache_create (struct kmem_cache *cachep, unsigned long flags)
 }
 ```
 
+在__kmem_cache_create()函数中，第14~17行代码中首先检查size是否和系统的word长度对齐（BYTE_PER_WORD）。在ARM Vexpress平台中，BYTE_PER_WORD为4Byte，我们的例子的size为20Byte，所以和BYTES_PER_WORD对齐。
 
+第20~25行代码，接着计算align对齐的大小。我们的例子中cachep->align值为8byte。
+
+第31~34行代码，枚举类型slab_state用来表示slab系统中的状态，例如DOWN、PARTIAL、PATRIAL_NODE、UP和FULL等，当slab机制完全初始化完成后状态变成为FULL。slab_is_available()表示当slab状态在UP或者FULL时，分配掩码可以使用GFP_KERNEL，否则只能使用GFP_NOWAIT；
+
+第42~48行代码中，当需要分配slab缓冲区对象大小大于128Byte时，slab系统认为对象的大小比较大，那么分配掩码要设置CFLGS_OFF_SLAB标志位。我们的例子会忽略CFLGS_OFF_SLAB这个标志位。
+
+第50行代码中，根据size和align对齐关系，计算出最终的size大小。在我们例子中，size为20Byte，align为8Byte，所以最终大小为24byte。
+
+第58行代码通过calculate_slab_order()函数计算相关的核心参数。
+
+```
+[kmem_cache_create()->do_kmem_cache_create()->__kmem_cache_create()->calculate_slab_order()]
+/**
+ * calculate_slab_order - calculate size (page order) of slabs
+ * @cachep: pointer to the cache that is being created
+ * @size: size of objects to be created in this cache.
+ * @align: required alignment for the objects.
+ * @flags: slab allocation flags
+ *
+ * Also calculates the number of objects per slab.
+ *
+ * This could be made much more intelligent.  For now, try to avoid using
+ * high order pages for slabs.  When the gfp() functions are more friendly
+ * towards high-order requests, this should be changed.
+ */
+static size_t calculate_slab_order(struct kmem_cache *cachep,
+			size_t size, size_t align, unsigned long flags)
+{
+	unsigned long offslab_limit;
+	size_t left_over = 0;
+	int gfporder;
+
+	for (gfporder = 0; gfporder <= KMALLOC_MAX_ORDER; gfporder++) {
+		unsigned int num;
+		size_t remainder;
+
+		cache_estimate(gfporder, size, align, flags, &remainder, &num);
+		if (!num)
+			continue;
+
+		/* Can't handle number of objects more than SLAB_OBJ_MAX_NUM */
+		if (num > SLAB_OBJ_MAX_NUM)
+			break;
+
+		if (flags & CFLGS_OFF_SLAB) {
+			size_t freelist_size_per_obj = sizeof(freelist_idx_t);
+			/*
+			 * Max number of objs-per-slab for caches which
+			 * use off-slab slabs. Needed to avoid a possible
+			 * looping condition in cache_grow().
+			 */
+			if (IS_ENABLED(CONFIG_DEBUG_SLAB_LEAK))
+				freelist_size_per_obj += sizeof(char);
+			offslab_limit = size;
+			offslab_limit /= freelist_size_per_obj;
+
+ 			if (num > offslab_limit)
+				break;
+		}
+
+		/* Found something acceptable - save it away */
+		cachep->num = num;
+		cachep->gfporder = gfporder;
+		left_over = remainder;
+
+		/*
+		 * A VFS-reclaimable slab tends to have most allocations
+		 * as GFP_NOFS and we really don't want to have to be allocating
+		 * higher-order pages when we are unable to shrink dcache.
+		 */
+		if (flags & SLAB_RECLAIM_ACCOUNT)
+			break;
+
+		/*
+		 * Large number of objects is good, but very large slabs are
+		 * currently bad for the gfp()s.
+		 */
+		if (gfporder >= slab_max_order)
+			break;
+
+		/*
+		 * Acceptable internal fragmentation?
+		 */
+		if (left_over * 8 <= (PAGE_SIZE << gfporder))
+			break;
+	}
+	return left_over;
+}
+```
+
+calculate_slab_order()函数会计算出一个slab需要多少个物理页面，同时也计算出slab可以容纳多少个对象。
+
+如图所示，一个slab由2^gfporder个连续的物理页面组成，包含了num个slab对象、着色区和freelist区。
+
+![](picture/slab结构.png)
+
+第7行代码，for循环中首先会从0开始计算最合适的gfporder值，最多支持的页面数是2^KMALLOC_MAX_ORDER，slab分配器中KMALLOC_MAX_ORDER为25，所以一个slab的大小最大为2^25个页面，即32MB大小。KMALLOC_MAX_ORDER的计算方法如下：
 
