增加slab知识点

--- a/kernel/memory/5. slab分配器/1. 创建slab描述符.md
+++ b/kernel/memory/5. slab分配器/1. 创建slab描述符.md
@@ -617,5 +617,218 @@ static void cache_estimate(unsigned long gfporder, size_t buffer_size,
 	*num = nr_objs;
 	*left_over = slab_size - nr_objs*buffer_size - mgmt_size;
 }
+
+static int calculate_nr_objs(size_t slab_size, size_t buffer_size,
+				size_t idx_size, size_t align)
+{
+	int nr_objs;
+	size_t remained_size;
+	size_t freelist_size;
+	int extra_space = 0;
+
+	if (IS_ENABLED(CONFIG_DEBUG_SLAB_LEAK))
+		extra_space = sizeof(char);
+	/*
+	 * Ignore padding for the initial guess. The padding
+	 * is at most @align-1 bytes, and @buffer_size is at
+	 * least @align. In the worst case, this result will
+	 * be one greater than the number of objects that fit
+	 * into the memory allocation when taking the padding
+	 * into account.
+	 */
+	nr_objs = slab_size / (buffer_size + idx_size + extra_space);
+
+	/*
+	 * This calculated number will be either the right
+	 * amount, or one greater than what we want.
+	 */
+	remained_size = slab_size - nr_objs * buffer_size;
+	freelist_size = calculate_freelist_size(nr_objs, align);
+	if (remained_size < freelist_size)
+		nr_objs--;
+
+	return nr_objs;
+}
+
+static size_t calculate_freelist_size(int nr_objs, size_t align)
+{
+	size_t freelist_size;
+
+	freelist_size = nr_objs * sizeof(freelist_idx_t);
+	if (IS_ENABLED(CONFIG_DEBUG_SLAB_LEAK))
+		freelist_size += nr_objs * sizeof(char);
+
+	if (align)
+		freelist_size = ALIGN(freelist_size, align);
+
+	return freelist_size;
+}
+
 ```
 
+cache_estimate()函数会调用calculate_nr_objs()，计算公式并不复杂。
+
+```
+obj_num = buffer_size / (obj_size + sizeof(freelist_idx_t))
+```
+
+最后在calculate_slab_order()中的第16~44行代码有一些判断条件，例如判断slab的对象数目、cache colour着色器是否满足条件。如果满足，就不需要继续尝试更大的gfporder了。在我们例子中，gfporder为0，满足第43行代码的条件判断，最终计算完成后slab对象个数为cachep->num=163，cachep->gfporder=0，left_over=16，freelist_size=168，有兴趣的同学可以验算一遍calculate_slab_order()函数。
+
+回到__kmem_cache_create()函数，第76行代码cache_line_size()得出L1 cache行的大小，ARM Vexpress平台采用Cortex-A9处理器，L1 cache line大小可以配置成16B、32B或者64B。‘
+
+第80行代码，计算cache colour的大小，用left_over除以L1 Cache行大小，即left_over可以包含多少个L1 Cache行。假设L1 Cache line大小为16Byte，在我们这个例子中，只能包含1个cache行，如果L1 cache line 大小配置为64Byte，cache colour就不起作用了。
+
+最后调用setup_cpu_cache()函数来继续配置slab描述符。假设slab_state为FULL，即slab机制已经完成。内部直接调用enable_cpucache()函数。
+
+```
+[__kmem_cache_create()->setup_cpu_cache()->enable_cpucache()]
+/* Called with slab_mutex held always */
+static int enable_cpucache(struct kmem_cache *cachep, gfp_t gfp)
+{
+	int err;
+	int limit = 0;
+	int shared = 0;
+	int batchcount = 0;
+
+	if (!is_root_cache(cachep)) {
+		struct kmem_cache *root = memcg_root_cache(cachep);
+		limit = root->limit;
+		shared = root->shared;
+		batchcount = root->batchcount;
+	}
+
+	if (limit && shared && batchcount)
+		goto skip_setup;
+	/*
+	 * The head array serves three purposes:
+	 * - create a LIFO ordering, i.e. return objects that are cache-warm
+	 * - reduce the number of spinlock operations.
+	 * - reduce the number of linked list operations on the slab and
+	 *   bufctl chains: array operations are cheaper.
+	 * The numbers are guessed, we should auto-tune as described by
+	 * Bonwick.
+	 */
+	if (cachep->size > 131072)
+		limit = 1;
+	else if (cachep->size > PAGE_SIZE)
+		limit = 8;
+	else if (cachep->size > 1024)
+		limit = 24;
+	else if (cachep->size > 256)
+		limit = 54;
+	else
+		limit = 120;
+
+	/*
+	 * CPU bound tasks (e.g. network routing) can exhibit cpu bound
+	 * allocation behaviour: Most allocs on one cpu, most free operations
+	 * on another cpu. For these cases, an efficient object passing between
+	 * cpus is necessary. This is provided by a shared array. The array
+	 * replaces Bonwick's magazine layer.
+	 * On uniprocessor, it's functionally equivalent (but less efficient)
+	 * to a larger limit. Thus disabled by default.
+	 */
+	shared = 0;
+	if (cachep->size <= PAGE_SIZE && num_possible_cpus() > 1)
+		shared = 8;
+
+#if DEBUG
+	/*
+	 * With debugging enabled, large batchcount lead to excessively long
+	 * periods with disabled local interrupts. Limit the batchcount
+	 */
+	if (limit > 32)
+		limit = 32;
+#endif
+	batchcount = (limit + 1) / 2;
+skip_setup:
+	err = do_tune_cpucache(cachep, limit, batchcount, shared, gfp);
+	if (err)
+		printk(KERN_ERR "enable_cpucache failed for %s, error %d.\n",
+		       cachep->name, -err);
+	return err;
+}
+```
+
+在enable_cpucache()函数中，第7~16行代码根据对象大小来计算空闲对象的最大阈值limit，这里limit默认选择120；
+
+第28行代码，在SMP系统中且slab对象大小不大于一个页面的情况下，shared这个变量设置为8；
+
+第31行代码，计算batchcount数目，通常是最大阈值limit的一半，batchcount一般用于本地缓冲区和共享缓冲区之间来填充对象的数量。
+
+继续调用do_tune_cpucache()函数来配置slab描述符。
+
+```
+__kmem_cache_create()->setup_cpu_cache()->enable_cpucache()->__do_tune_cpu_cache()
+/* Always called with the slab_mutex held */
+static int __do_tune_cpucache(struct kmem_cache *cachep, int limit,
+				int batchcount, int shared, gfp_t gfp)
+{
+	struct array_cache __percpu *cpu_cache, *prev;
+	int cpu;
+
+	cpu_cache = alloc_kmem_cache_cpus(cachep, limit, batchcount);
+	if (!cpu_cache)
+		return -ENOMEM;
+
+	prev = cachep->cpu_cache;
+	cachep->cpu_cache = cpu_cache;
+	kick_all_cpus_sync();
+
+	check_irq_on();
+	cachep->batchcount = batchcount;
+	cachep->limit = limit;
+	cachep->shared = shared;
+
+	if (!prev)
+		goto alloc_node;
+
+	for_each_online_cpu(cpu) {
+		LIST_HEAD(list);
+		int node;
+		struct kmem_cache_node *n;
+		struct array_cache *ac = per_cpu_ptr(prev, cpu);
+
+		node = cpu_to_mem(cpu);
+		n = get_node(cachep, node);
+		spin_lock_irq(&n->list_lock);
+		free_block(cachep, ac->entry, ac->avail, node, &list);
+		spin_unlock_irq(&n->list_lock);
+		slabs_destroy(cachep, &list);
+	}
+	free_percpu(prev);
+
+alloc_node:
+	return alloc_kmem_cache_node(cachep, gfp);
+}
+```
+
+在__do_tune_cpucache()函数中，首先通过allow_kmem_cpus()函数来分配Per-CPU类型的struct array_cache数据结构，我们称之为对象缓冲池。对象缓冲池包含了一个Per-CPU类型的struct array_cache指针，即系统中每个CPU有一个struct array_cache指针。当前CPU的array_cache称为本地对象缓冲池，另外还有一个概念为共享对象缓冲池。
+
+```static struct array_cache __percpu *alloc_kmem_cache_cpus(
+struct kmem_cache *cachep, int entries, int batchcount)
+{
+	int cpu;
+	size_t size;
+	struct array_cache __percpu *cpu_cache;
+
+	size = sizeof(void *) * entries + sizeof(struct array_cache);
+	cpu_cache = __alloc_percpu(size, sizeof(void *));
+
+	if (!cpu_cache)
+		return NULL;
+
+	for_each_possible_cpu(cpu) {
+		init_arraycache(per_cpu_ptr(cpu_cache, cpu),
+				entries, batchcount);
+	}
+
+	return cpu_cache;
+}
+```
+
+通过alloc_kmem_cache_cpus()函数来分配对象缓冲池，注意这里计算size时考虑对象缓冲池最大阈值limit，参数entries是指最大阈值limit，见第7行代码。
+
+init_arraycache()设置对象缓冲池的limit和batchcount，其中limit为120，batchcount为60。
+
+回到
