--- a/kernel/memory/5. slab分配器/1. 创建slab描述符.md
+++ b/kernel/memory/5. slab分配器/1. 创建slab描述符.md
@@ -831,4 +831,100 @@ struct kmem_cache *cachep, int entries, int batchcount)
 
 init_arraycache()设置对象缓冲池的limit和batchcount，其中limit为120，batchcount为60。
 
-回到
+回到__do_tune_cpucache()函数，刚分配的对象缓冲池cpu_cache会被设置为slab描述符的本地对象缓冲池。调用alloc_kmem_cache_node()来继续初始化slab缓冲区cachep->kmem_cache_node数据结构。
+
+```
+[__kmem_cache_create()->setup_cpu_cache()->enable_cpucache()->__do_tune_cpu_cache()->alloc_kmem_cache_node()]
+/*
+ * This initializes kmem_cache_node or resizes various caches for all nodes.
+ */
+static int alloc_kmem_cache_node(struct kmem_cache *cachep, gfp_t gfp)
+{
+	int node;
+	struct kmem_cache_node *n;
+	struct array_cache *new_shared;
+	struct alien_cache **new_alien = NULL;
+
+	for_each_online_node(node) {
+
+		if (use_alien_caches) {
+			new_alien = alloc_alien_cache(node, cachep->limit, gfp);
+			if (!new_alien)
+				goto fail;
+		}
+
+		new_shared = NULL;
+		if (cachep->shared) {
+			new_shared = alloc_arraycache(node,
+				cachep->shared*cachep->batchcount,
+					0xbaadf00d, gfp);
+			if (!new_shared) {
+				free_alien_cache(new_alien);
+				goto fail;
+			}
+		}
+
+		n = get_node(cachep, node);
+		if (n) {
+			struct array_cache *shared = n->shared;
+			LIST_HEAD(list);
+
+			spin_lock_irq(&n->list_lock);
+
+			if (shared)
+				free_block(cachep, shared->entry,
+						shared->avail, node, &list);
+
+			n->shared = new_shared;
+			if (!n->alien) {
+				n->alien = new_alien;
+				new_alien = NULL;
+			}
+			n->free_limit = (1 + nr_cpus_node(node)) *
+					cachep->batchcount + cachep->num;
+			spin_unlock_irq(&n->list_lock);
+			slabs_destroy(cachep, &list);
+			kfree(shared);
+			free_alien_cache(new_alien);
+			continue;
+		}
+		n = kmalloc_node(sizeof(struct kmem_cache_node), gfp, node);
+		if (!n) {
+			free_alien_cache(new_alien);
+			kfree(new_shared);
+			goto fail;
+		}
+
+		kmem_cache_node_init(n);
+		n->next_reap = jiffies + REAPTIMEOUT_NODE +
+				((unsigned long)cachep) % REAPTIMEOUT_NODE;
+		n->shared = new_shared;
+		n->alien = new_alien;
+		n->free_limit = (1 + nr_cpus_node(node)) *
+					cachep->batchcount + cachep->num;
+		cachep->node[node] = n;
+	}
+	return 0;
+
+fail:
+	if (!cachep->list.next) {
+		/* Cache is not active yet. Roll back what we did */
+		node--;
+		while (node >= 0) {
+			n = get_node(cachep, node);
+			if (n) {
+				kfree(n->shared);
+				free_alien_cache(n->alien);
+				kfree(n);
+				cachep->node[node] = NULL;
+			}
+			node--;
+		}
+	}
+	return -ENOMEM;
+}
+```
+
+在alloc_kmem_cache_node()函数中，第7~43行代码，for循环是遍历系统中所有的NUMA节点，在ARM Vexpress平台中只有一个节点；
+
+如果cachep->shared大于0（在多核系统中cachep->shared会大于0，这个在enable_cpucache()函数中已经初始化了，cachep_shared为8，通过alloc_arrarycache()来分配一个共享对象缓冲）
