--- a/kernel/memory/5. slab分配器/1. 创建slab描述符.md
+++ b/kernel/memory/5. slab分配器/1. 创建slab描述符.md
@@ -674,7 +674,7 @@ obj_num = buffer_size / (obj_size + sizeof(freelist_idx_t))
 
 最后在calculate_slab_order()中的第16~44行代码有一些判断条件，例如判断slab的对象数目、cache colour着色器是否满足条件。如果满足，就不需要继续尝试更大的gfporder了。在我们例子中，gfporder为0，满足第43行代码的条件判断，最终计算完成后slab对象个数为cachep->num=163，cachep->gfporder=0，left_over=16，freelist_size=168，有兴趣的同学可以验算一遍calculate_slab_order()函数。
 
-回到__kmem_cache_create()函数，第76行代码cache_line_size()得出L1 cache行的大小，ARM Vexpress平台采用Cortex-A9处理器，L1 cache line大小可以配置成16B、32B或者64B。‘
+回到__kmem_cache_create()函数，第76行代码cache_line_size()得出L1 cache行的大小，ARM Vexpress平台采用Cortex-A9处理器，L1 cache line大小可以配置成16B、32B或者64B。
 
 第80行代码，计算cache colour的大小，用left_over除以L1 Cache行大小，即left_over可以包含多少个L1 Cache行。假设L1 Cache line大小为16Byte，在我们这个例子中，只能包含1个cache行，如果L1 cache line 大小配置为64Byte，cache colour就不起作用了。
 
@@ -927,4 +927,81 @@ fail:
 
 在alloc_kmem_cache_node()函数中，第7~43行代码，for循环是遍历系统中所有的NUMA节点，在ARM Vexpress平台中只有一个节点；
 
-如果cachep->shared大于0（在多核系统中cachep->shared会大于0，这个在enable_cpucache()函数中已经初始化了，cachep_shared为8，通过alloc_arrarycache()来分配一个共享对象缓冲）
+如果cachep->shared大于0（在多核系统中cachep->shared会大于0，这个在enable_cpucache()函数中已经初始化了，cachep_shared为8），通过alloc_arrarycache()来分配一个共享对象缓冲池new_shared，为多核CPU之间共享空闲缓存对象。
+
+第15~34行代码，获取系统中的kmem_cache_node节点。在我们例子中，kmem_cache_node节点还没分配，所以第35~42行代码新分配了一个kmem_cache_node节点，我们把kmem_cache_node节点简称为slab节点。
+
+struct kmem_cache_node数据结构包括3个slab链表，分别表示部分空间，完全用尽、空闲。free_objects表示上述3个链表中空闲对象的总和，free_limit表示所有slab上容许空闲对象的最大数目。slab节点上还包含在一个NUMA节点中CPU之间共享的共享对象缓冲池new_shared。
+
+struct kmem_cache_node数据结构定义如下：
+
+```
+struct kmem_cache_node {
+	spinlock_t list_lock;
+
+#ifdef CONFIG_SLAB
+	struct list_head slabs_partial;	/* partial list first, better asm code */
+	struct list_head slabs_full;
+	struct list_head slabs_free;
+	unsigned long free_objects;
+	unsigned int free_limit;
+	unsigned int colour_next;	/* Per-node cache coloring */
+	struct array_cache *shared;	/* shared per node */
+	struct alien_cache **alien;	/* on other nodes */
+	unsigned long next_reap;	/* updated without locking */
+	int free_touched;		/* updated without locking */
+#endif
+
+#ifdef CONFIG_SLUB
+	unsigned long nr_partial;
+	struct list_head partial;
+#ifdef CONFIG_SLUB_DEBUG
+	atomic_long_t nr_slabs;
+	atomic_long_t total_objects;
+	struct list_head full;
+#endif
+#endif
+
+};
+```
+
+slab节点用于NUMA系统，在ARM Vexpress平台上只有一个内存节点。
+
+- slabs_partial/slabs_full/slabs_free：slab节点上的3个链表，链表每个成员都是一个slab。
+- free_objects：3个链表中所有空闲对象数目。
+- free_limit：slab可容许的空闲对象数目最大阈值。
+- shared：在多核CPU中，除了本地CPU外，其余CPU有一个共享的对象缓冲池
+
+至此，slab描述符的建立已经完成，下面把slab分配器中的重要数据结构重新看一下，并且把我们例子中相关的数据结构的结构列出来，方便大家看代码可以自行验算。我们这个例子为在ARM Vexpress平台创建名为"figo_object"的slab描述符，大小为20Byte，align为8byte，flags为0，假设L1 cache line大小为16byte，其slab描述符相关成员的计算结果如下：
+
+```
+struct kmem_cache *cachep {
+ .array_cache = {
+ 	.avail = 0,
+ 	.limit = 120,
+ 	.batchcount = 60,
+ 	.touched = 0,
+ }
+ .batchcount = 60,
+ .limit = 120,
+ .shared = 8,
+ .size = 24,
+ .flags = 0,
+ .num = 163,
+ .gfporder = 0,
+ .colour = 1,
+ .colour_off = 16,
+ .freelist_size = 168,
+ .object_size = 20,
+ .align = 8,
+ .kmem_cache_node = {
+ 	.free_object = 0,
+ 	.free_limit = 283,
+ 	.shared_array_cache = {
+ 		.avail = 0,
+ 		.limit = 480,
+ 	}
+ }
+}
+```
+
