--- a/kernel/memory/5. slab分配器/2. 分配slab对象.md
+++ b/kernel/memory/5. slab分配器/2. 分配slab对象.md
@@ -240,5 +240,132 @@ force_grow:
 
 - 如果slabs_partial链表或者slabs_free链表不为空，说明有空闲对象，那么从队列取出一个成员slab，通过slab_get_obj()获取对象的地址，然后通过ac_put_obj()把对象迁移到对象缓冲池ac中，最后把这个slab挂回合适的链表。slab_get_obj()和ac_put_obj()函数实现如下：
 
+```
+static inline freelist_idx_t get_free_obj(struct page *page, unsigned int idx)
+{
+	return ((freelist_idx_t *)page->freelist)[idx];
+}
+static inline void *index_to_obj(struct kmem_cache *cache, struct page *page,
+				 unsigned int idx)
+{
+	return page->s_mem + cache->size * idx;
+}
+static void *slab_get_obj(struct kmem_cache *cachep, struct page *page,
+				int nodeid)
+{
+	void *objp;
 
+	objp = index_to_obj(cachep, page, get_free_obj(page, page->active));
+	page->active++;
+#if DEBUG
+	WARN_ON(page_to_nid(virt_to_page(objp)) != nodeid);
+#endif
+
+	return objp;
+}
+static inline void ac_put_obj(struct kmem_cache *cachep, struct array_cache *ac,
+								void *objp)
+{
+	if (unlikely(sk_memalloc_socks()))
+		objp = __ac_put_obj(cachep, ac, objp);
+
+	ac->entry[ac->avail++] = objp;
+}
+```
+
+- 如果slabs_partial链表或者slabs_free链表都为空，说明整个slab节点都没有空闲节点，这时需要重新分配slab，这时我们例子第一次运行kmem_cache_alloc()这个API的情景，程序应该跑到cache_alloc_refill()函数第55行代码的must_grow标签处，真正分配对象是在cache_grow()函数。
+
+```
+[kmem_cache_alloc()->_cache_alloc()->cache_alloc_refill()->cache_grow()]
+/*
+ * Grow (by 1) the number of slabs within a cache.  This is called by
+ * kmem_cache_alloc() when there are no active objs left in a cache.
+ */
+static int cache_grow(struct kmem_cache *cachep,
+		gfp_t flags, int nodeid, struct page *page)
+{
+	void *freelist;
+	size_t offset;
+	gfp_t local_flags;
+	struct kmem_cache_node *n;
+
+	/*
+	 * Be lazy and only check for valid flags here,  keeping it out of the
+	 * critical path in kmem_cache_alloc().
+	 */
+	if (unlikely(flags & GFP_SLAB_BUG_MASK)) {
+		pr_emerg("gfp: %u\n", flags & GFP_SLAB_BUG_MASK);
+		BUG();
+	}
+	local_flags = flags & (GFP_CONSTRAINT_MASK|GFP_RECLAIM_MASK);
+
+	/* Take the node list lock to change the colour_next on this node */
+	check_irq_off();
+	n = get_node(cachep, nodeid);
+	spin_lock(&n->list_lock);
+
+	/* Get colour for the slab, and cal the next value. */
+	offset = n->colour_next;
+	n->colour_next++;
+	if (n->colour_next >= cachep->colour)
+		n->colour_next = 0;
+	spin_unlock(&n->list_lock);
+
+	offset *= cachep->colour_off;
+
+	if (local_flags & __GFP_WAIT)
+		local_irq_enable();
+
+	/*
+	 * The test for missing atomic flag is performed here, rather than
+	 * the more obvious place, simply to reduce the critical path length
+	 * in kmem_cache_alloc(). If a caller is seriously mis-behaving they
+	 * will eventually be caught here (where it matters).
+	 */
+	kmem_flagcheck(cachep, flags);
+
+	/*
+	 * Get mem for the objs.  Attempt to allocate a physical page from
+	 * 'nodeid'.
+	 */
+	if (!page)
+		page = kmem_getpages(cachep, local_flags, nodeid);
+	if (!page)
+		goto failed;
+
+	/* Get slab management. */
+	freelist = alloc_slabmgmt(cachep, page, offset,
+			local_flags & ~GFP_CONSTRAINT_MASK, nodeid);
+	if (!freelist)
+		goto opps1;
+
+	slab_map_pages(cachep, page, freelist);
+
+	cache_init_objs(cachep, page);
+
+	if (local_flags & __GFP_WAIT)
+		local_irq_disable();
+	check_irq_off();
+	spin_lock(&n->list_lock);
+
+	/* Make slab active. */
+	list_add_tail(&page->lru, &(n->slabs_free));
+	STATS_INC_GROWN(cachep);
+	n->free_objects += cachep->num;
+	spin_unlock(&n->list_lock);
+	return 1;
+opps1:
+	kmem_freepages(cachep, page);
+failed:
+	if (local_flags & __GFP_WAIT)
+		local_irq_disable();
+	return 0;
+}
+```
+
+在cache_grow()函数中，第15行代码n->colour_next表示slab节点中下一个slab应该包含的colour数目，cache colour从0开始增加，每个slab加1，直到这个slab描述符的colour最大值cachep->colour，然后又从0开始计算。colour的大小为cache line大小，即cachep->colour_off，这样布局有利于提高硬件的cache效率。
+
+第23行代码，如果分配掩码中使用了允许睡眠标志位__GFP_WAIT，那么先暂时打开本地中断。
+
+第31行代码，分配一个slab所需要的页面，这里会分配2^cachep->gfporder个页面，cachep->gfporder已经在kmem_cache_create()函数中初始化了，在我们例子中cachep->gfporder为0。
 
