--- a/kernel/memory/5. slab分配器/2. 分配slab对象.md
+++ b/kernel/memory/5. slab分配器/2. 分配slab对象.md
@@ -127,7 +127,7 @@ static inline void *ac_get_obj(struct kmem_cache *cachep,
 
 看到这里有一个疑问，从kmem_cache_create()函数创建成功返回时，ac->avail应该是0，而且没有看到kmem_cache_create()函数有向伙伴系统申请要内存，那对象从哪里来的呢？
 
-我们在仔细看__cache_alloc()函数，因为第一次分配缓存对象时ac->avail的值为0，因此是运行不到第6~18行代码的，直接运行到第20行代码的cache_alloc_refill()；
+我们在仔细看__cache_alloc()函数，因为第一次分配缓存对象时ac->avail的值为0，因此是运行不到第6~18行代码的，直接运行到第20行代码的**cache_alloc_refill()**；
 
 ```
 [kmem_cache_alloc()->__cache_alloc()->cache_alloc_refill()]
@@ -369,3 +369,101 @@ failed:
 
 第31行代码，分配一个slab所需要的页面，这里会分配2^cachep->gfporder个页面，cachep->gfporder已经在kmem_cache_create()函数中初始化了，在我们例子中cachep->gfporder为0。
 
+第34行代码，alloc_slabmgmt()函数计算slab中的cache colour和freelist，以及对象的地址布局，其中page->freelist是内存块开始地址减去cache colour后的地址，可以想象成一个char类型的数组，每个对象占用一个数组成员来存放对象的序号。**page->s_mem是slab中的第一个对象的开始地址，内存块开始地址减去cache colour和freelist_size**。在slab_map_pages()函数中，page->slab_cache指向这个cachep。alloc_slabmgmt()和slab_map_pages()函数实现如下：
+
+```
+static void *alloc_slabmgmt(struct kmem_cache *cachep,
+				   struct page *page, int colour_off,
+				   gfp_t local_flags, int nodeid)
+{
+	void *freelist;
+	void *addr = page_address(page);
+
+	if (OFF_SLAB(cachep)) {
+		/* Slab management obj is off-slab. */
+		freelist = kmem_cache_alloc_node(cachep->freelist_cache,
+					      local_flags, nodeid);
+		if (!freelist)
+			return NULL;
+	} else {
+		freelist = addr + colour_off;
+		colour_off += cachep->freelist_size;
+	}
+	page->active = 0;
+	page->s_mem = addr + colour_off;
+	return freelist;
+}
+static void slab_map_pages(struct kmem_cache *cache, struct page *page,
+			   void *freelist)
+{
+	page->slab_cache = cache;
+	page->freelist = freelist;
+}
+```
+
+在cache_grow()函数第39行代码初始化slab所有对象的状态，其中set_free_obj()函数会把对象序号填入freelist数组中。
+
+```
+static inline void *index_to_obj(struct kmem_cache *cache, struct page *page,
+				 unsigned int idx)
+{
+	return page->s_mem + cache->size * idx;
+}
+static inline void set_free_obj(struct page *page,
+					unsigned int idx, freelist_idx_t val)
+{
+	((freelist_idx_t *)(page->freelist))[idx] = val;
+}
+static void cache_init_objs(struct kmem_cache *cachep,
+			    struct page *page)
+{
+	int i;
+
+	for (i = 0; i < cachep->num; i++) {
+		void *objp = index_to_obj(cachep, page, i);
+#if DEBUG
+		/* need to poison the objs? */
+		if (cachep->flags & SLAB_POISON)
+			poison_obj(cachep, objp, POISON_FREE);
+		if (cachep->flags & SLAB_STORE_USER)
+			*dbg_userword(cachep, objp) = NULL;
+
+		if (cachep->flags & SLAB_RED_ZONE) {
+			*dbg_redzone1(cachep, objp) = RED_INACTIVE;
+			*dbg_redzone2(cachep, objp) = RED_INACTIVE;
+		}
+		/*
+		 * Constructors are not allowed to allocate memory from the same
+		 * cache which they are a constructor for.  Otherwise, deadlock.
+		 * They must also be threaded.
+		 */
+		if (cachep->ctor && !(cachep->flags & SLAB_POISON))
+			cachep->ctor(objp + obj_offset(cachep));
+
+		if (cachep->flags & SLAB_RED_ZONE) {
+			if (*dbg_redzone2(cachep, objp) != RED_INACTIVE)
+				slab_error(cachep, "constructor overwrote the"
+					   " end of an object");
+			if (*dbg_redzone1(cachep, objp) != RED_INACTIVE)
+				slab_error(cachep, "constructor overwrote the"
+					   " start of an object");
+		}
+		if ((cachep->size % PAGE_SIZE) == 0 &&
+			    OFF_SLAB(cachep) && cachep->flags & SLAB_POISON)
+			kernel_map_pages(virt_to_page(objp),
+					 cachep->size / PAGE_SIZE, 0);
+#else
+		if (cachep->ctor)
+			cachep->ctor(objp);
+#endif
+		set_obj_status(page, i, OBJECT_FREE);
+		set_free_obj(page, i, i);
+	}
+}
+```
+
+最后这个slab添加到slab节点的slabs_free链表中。
+
+回到cache_alloc_refill()函数中，第66行代码重新获取本地对象缓冲池，因为这期间可能有中断发生，CPU可能发生进程切换。
+
+第77行代码，因为cache_grow()函数仅仅重新分配了slab且挂入了slabs_free链表，但当前CPU的ac->avail为0，所以跳转到retry标签，重新来一次，这次一定能分配出对象。
