修改slab代码，具体一些

--- a/kernel/memory/5. slab分配器/1. 创建slab描述符.md
+++ b/kernel/memory/5. slab分配器/1. 创建slab描述符.md
@@ -2,79 +2,74 @@
 
 ```
 [include/linux/slab_def.h]
-
-/*
- * Definitions unique to the original Linux SLAB allocator.
- */
-
 struct kmem_cache {
-	struct array_cache __percpu *cpu_cache;
+    struct array_cache __percpu *cpu_cache;
 
 /* 1) Cache tunables. Protected by slab_mutex */
-	unsigned int batchcount;
-	unsigned int limit;
-	unsigned int shared;
+    unsigned int batchcount;-----------------------------------表示当前CPU本地缓冲池array_cache为空时，从共享缓冲池或者slabs_partial/slabs_free列表中获取对象的数目。
+    unsigned int limit;----------------------------------------表示当本地对象缓冲池空闲对象数目大于limit时就会主动释放batchcount个对象，便于内核回收和销毁slab。
+    unsigned int shared;
 
-	unsigned int size;
-	struct reciprocal_value reciprocal_buffer_size;
+    unsigned int size;-----------------------------------------align过后的对象长度
+    struct reciprocal_value reciprocal_buffer_size;
 /* 2) touched by every alloc & free from the backend */
 
-	unsigned int flags;		/* constant flags */
-	unsigned int num;		/* # of objs per slab */
+    unsigned int flags;        /* constant flags */------------分配掩码
+    unsigned int num;        /* # of objs per slab */----------slab中有多少个对象
 
 /* 3) cache_grow/shrink */
-	/* order of pgs per slab (2^n) */
-	unsigned int gfporder;
+    /* order of pgs per slab (2^n) */
+    unsigned int gfporder;------------------------------------此slab占用z^gfporder个页面
 
-	/* force GFP flags, e.g. GFP_DMA */
-	gfp_t allocflags;
+    /* force GFP flags, e.g. GFP_DMA */
+    gfp_t allocflags;
 
-	size_t colour;			/* cache colouring range */
-	unsigned int colour_off;	/* colour offset */
-	struct kmem_cache *freelist_cache;
-	unsigned int freelist_size;
+    size_t colour;            /* cache colouring range */----一个slab有几个不同的cache line
+    unsigned int colour_off;    /* colour offset */----------一个cache order的长度，和L1 Cache Line长度相同
+    struct kmem_cache *freelist_cache;
+    unsigned int freelist_size;
 
-	/* constructor func */
-	void (*ctor)(void *obj);
+    /* constructor func */
+    void (*ctor)(void *obj);
 
 /* 4) cache creation/removal */
-	const char *name;
-	struct list_head list;
-	int refcount;
-	int object_size;
-	int align;
+    const char *name;----------------------------------------slab描述符的名称
+    struct list_head list;
+    int refcount;--------------------------------------------被引用的次数，供slab描述符销毁参考
+    int object_size;-----------------------------------------对象的实际大小
+    int align;-----------------------------------------------对齐的大小
 
 /* 5) statistics */
 #ifdef CONFIG_DEBUG_SLAB
-	unsigned long num_active;
-	unsigned long num_allocations;
-	unsigned long high_mark;
-	unsigned long grown;
-	unsigned long reaped;
-	unsigned long errors;
-	unsigned long max_freeable;
-	unsigned long node_allocs;
-	unsigned long node_frees;
-	unsigned long node_overflow;
-	atomic_t allochit;
-	atomic_t allocmiss;
-	atomic_t freehit;
-	atomic_t freemiss;
+    unsigned long num_active;
+    unsigned long num_allocations;
+    unsigned long high_mark;
+    unsigned long grown;
+    unsigned long reaped;
+    unsigned long errors;
+    unsigned long max_freeable;
+    unsigned long node_allocs;
+    unsigned long node_frees;
+    unsigned long node_overflow;
+    atomic_t allochit;
+    atomic_t allocmiss;
+    atomic_t freehit;
+    atomic_t freemiss;
 
-	/*
-	 * If debugging is enabled, then the allocator can add additional
-	 * fields and/or padding to every object. size contains the total
-	 * object size including these internal fields, the following two
-	 * variables contain the offset to the user object and its size.
-	 */
-	int obj_offset;
+    /*
+     * If debugging is enabled, then the allocator can add additional
+     * fields and/or padding to every object. size contains the total
+     * object size including these internal fields, the following two
+     * variables contain the offset to the user object and its size.
+     */
+    int obj_offset;
 #endif /* CONFIG_DEBUG_SLAB */
 #ifdef CONFIG_MEMCG_KMEM
-	struct memcg_cache_params memcg_params;
+    struct memcg_cache_params memcg_params;
 #endif
 
-	struct kmem_cache_node *node[MAX_NUMNODES];
-};
+    struct kmem_cache_node *node[MAX_NUMNODES];-------slab对应的节点的struct kmem_cache_node数据结构
+}
 ```
 
 每一个slab描述符都由一个struct kmem_cache数据结构来抽象描述。
@@ -98,32 +93,12 @@ struct kmem_cache {
 struct array_cache数据结构定义如下：
 
 ```
-/*
- * struct array_cache
- *
- * Purpose:
- * - LIFO ordering, to hand out cache-warm objects from _alloc
- * - reduce the number of linked list operations
- * - reduce spinlock operations
- *
- * The limit is stored in the per-cpu structure to reduce the data cache
- * footprint.
- *
- */
 struct array_cache {
-	unsigned int avail;
-	unsigned int limit;
-	unsigned int batchcount;
-	unsigned int touched;
-	void *entry[];	/*
-			 * Must have this definition in here for the proper
-			 * alignment of array_cache. Also simplifies accessing
-			 * the entries.
-			 *
-			 * Entries should not be directly dereferenced as
-			 * entries belonging to slabs marked pfmemalloc will
-			 * have the lower bits set SLAB_OBJ_PFMEMALLOC
-			 */
+    unsigned int avail;-------------对象缓冲池中可用的对象数目
+    unsigned int limit;
+    unsigned int batchcount;
+    unsigned int touched;----------从缓冲池移除一个对象时，touched置1；收缩缓存时，touched置0。
+    void *entry[];-----------------保存对象的实体
 };
 ```
 
@@ -134,7 +109,7 @@ slab描述符给每个CPU都提供一个对象缓冲池（array_cache）。
 - touched：从缓冲池中移除一个对象时，将touched置1，而收缩缓存时，将touched置0；
 - entry：保存对象的实体；
 
-kmem_cache_create()函数的实现则是在slab_common.c文件中。
+kmem_cache_create()(创建slab描述符kmem_cache，此时并没有真正分配内存)函数的实现则是在slab_common.c文件中。
 
 ```
 [mm/slab_common.c]
